force-app/main/default/objects/CSCLP_Settings__c/CSCLP_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These are the settings for the CSCLP</description>
    <label>CSCLP Settings</label>
</CustomObject>