force-app/main/default/objects/CSCLP_Settings__c/fields/Client_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_ID__c</fullName>
    <description>This field represents the ID of the client these settings are attributable to. It is the Account ID for each client.</description>
    <inlineHelpText>This field represents the ID of the client these settings are attributable to. It is the Account ID for each client.</inlineHelpText>
    <label>Client Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>