force-app/main/default/objects/CSCLP_Settings__c/fields/Report_IDs__c.field-meta.xml
<CustomField>
    <fullName>Report_IDs__c</fullName>
    <description>This is the field the designates which reports go into the CSCLP</description>
    <label>Report IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>