force-app/main/default/objects/CSCLP_Settings__c/fields/Report_Names__c.field-meta.xml
<CustomField>
    <fullName>Report_Names__c</fullName>
    <description>This field represents the reports names a user in the CSCLP will see. Please list them out delimited by commas.</description>
    <inlineHelpText>This field represents the reports names a user in the CSCLP will see. Please list them out delimited by commas.</inlineHelpText>
    <label>Report Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>